tests/paczka1/small_fuzzy/26974706.err
Error in line 1: 5QQZlg5rcVn S277 57,3
Error in line 2: ajVPdM3A5L0 A413 58,3
Error in line 7: ajVPdM3A5L0 A22 46,4
